compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__no_variable_completions_after_case_clause_scope.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() {\n  case todo {\n    something -> Nil\n    something_else -> s\n  }\n  s\n}\n"
---
pub fn main() {
  case todo {
    something -> Nil
    something_else -> s|
  }
  s
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
main
  kind:   Function
  detail: fn() -> a
  sort:   2_main
  desc:   app
  edits:
    [4:22-4:22]: "main"
something_else
  kind:   Variable
  detail: a
  sort:   2_something_else
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [4:22-4:22]: "something_else"
